# AegisVault

./: .gitignore  README.md  pyproject.toml  run_agent.py
datasets/email/contacts/: contacts.json
datasets/email/drafts/: drafts.jsonl
datasets/email/inbox/: emails.jsonl
datasets/email/sent/: sent_emails.jsonl
datasets/email/tasks/: email_tasks.jsonl
docs/: email_agent.md  layer0.md  sentinel.md
evaluation/: README.md  __init__.py
evaluation/action_gate/scripts/: action_eval_lib.py  run_action_gate_evaluation.py
evaluation/agent_runtime/scripts/: run_email_agent_evaluation.py  validate_agent_runtime.py
evaluation/agentdojo/: README.md  run_pilot_benchmark.py
evaluation/datasets/ecommerce/: requests.jsonl  responses.jsonl
evaluation/layer0/: benchmark_layer0.py
evaluation/policies/: ecommerce.yaml  email_assistant.yaml  hr_assistant.yaml
evaluation/scripts/: __init__.py  eval_lib.py  generate_report.py  run_evaluation.py  validate_environment.py
evaluation/sentinel/: benchmark_sentinel.py
examples/: basic_usage.py
policies/: ecommerce.yaml
src/aegisvault/: __init__.py  exceptions.py  guard.py  types.py
src/aegisvault/audit/: __init__.py  (+2 more)
tests/: conftest.py  test_audit_logger.py  test_deterministic_checks.py  test_guard.py  test_layer0.py  test_ollama_integration.py  test_policy.py  test_request_gate.py  test_response_gate.py  test_sentinel.py
tests/email_agent/: test_email_agent.py
tests/evaluation/: test_eval_lib.py  test_stage2_integration.py
tests/integrations/: test_agentdojo_benchmark_harness.py  test_agentdojo_pipeline.py
(+38 files in other folders)
