[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisvault"
version = "0.1.0"
description = "Domain-specific guardrail middleware for AI applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AegisVault contributors" }]
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "requests>=2.31,<3",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
evaluation = [
  "google-genai>=1.0,<2",
]
dev = [
  "google-genai>=1.0,<2",
  "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "ollama: integration tests that require a running Ollama instance",
  "gemini: integration tests that require Gemini and Ollama",
]
